Certificados: icono medalla usando imagen (img/medalla.png), estilos de tamaño de icono, y enlace/título del primer certificado corregidos

--- a/style.css
+++ b/style.css
@@ -353,6 +353,12 @@ main {
   color: var(--accent);
 }
 
+.certificate-icon img {
+  width: 48px;
+  height: 48px;
+  display: block;
+}
+
 .certificate-title {
   font-weight: 600;
   font-size: 1.1rem;
